deployment/kubernetes/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: api
  name: api
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: api
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/network: "true"
        io.kompose.service: api
    spec:
      containers:
      - env:
        - name: DB_HOST
          value: database
        - name: ES_HOST
          value: elasticsearch
        - name: PORT
          value: "3301"
        image: api
        imagePullPolicy: ""
        name: api
        ports:
        - containerPort: 3301
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
