deployment/kubernetes/database-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: database
  name: database
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: database
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/network: "true"
        io.kompose.service: database
    spec:
      containers:
      - env:
        - name: MYSQL_DATABASE
          value: bible
        - name: MYSQL_PASSWORD
          value: docker
        - name: MYSQL_ROOT_PASSWORD
          value: docker
        - name: MYSQL_USER
          value: bible_user
        image: database
        imagePullPolicy: ""
        name: database
        ports:
        - containerPort: 3306
        resources: {}
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: database-data
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: database-data
        persistentVolumeClaim:
          claimName: database-data
status: {}
