deployment/kubernetes/logstash-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: logstash
  name: logstash
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: logstash
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/network: "true"
        io.kompose.service: logstash
    spec:
      containers:
      - env:
        - name: DB_DATABASE
          valueFrom:
            configMapKeyRef:
              key: DB_DATABASE
              name: api--env
        - name: DB_HOST
          valueFrom:
            configMapKeyRef:
              key: DB_HOST
              name: api--env
        - name: DB_PASSWORD
          valueFrom:
            configMapKeyRef:
              key: DB_PASSWORD
              name: api--env
        - name: DB_PORT
          valueFrom:
            configMapKeyRef:
              key: DB_PORT
              name: api--env
        - name: DB_USERNAME
          valueFrom:
            configMapKeyRef:
              key: DB_USERNAME
              name: api--env
        - name: ES_HOST
          valueFrom:
            configMapKeyRef:
              key: ES_HOST
              name: api--env
        - name: ES_PORT
          valueFrom:
            configMapKeyRef:
              key: ES_PORT
              name: api--env
        - name: LS_JAVA_OPTS
          value: -Xmx1g -Xms1g
        - name: NODE_ENV
          valueFrom:
            configMapKeyRef:
              key: NODE_ENV
              name: api--env
        - name: PORT
          valueFrom:
            configMapKeyRef:
              key: PORT
              name: api--env
        image: logstash
        imagePullPolicy: ""
        name: logstash
        ports:
        - containerPort: 5001
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
