deployment/kubernetes/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: api
  name: api
spec:
  ports:
  - name: "3301"
    port: 3301
    targetPort: 3301
  selector:
    io.kompose.service: api
status:
  loadBalancer: {}
