deployment/kubernetes/network-networkpolicy.yaml
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: network
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          io.kompose.network/network: "true"
  podSelector:
    matchLabels:
      io.kompose.network/network: "true"
